syntax = "proto3";

package treasuryImpl;

import "aelf/core.proto";
import "acs1.proto";
import "acs10.proto";
import "treasury_contract.proto";

option csharp_namespace = "AElf.Contracts.Treasury";

service TreasuryContract {
    option (aelf.csharp_state) = "AElf.Contracts.Treasury.TreasuryContractState";
    option (aelf.base) = "acs1.proto";
    option (aelf.base) = "acs10.proto";
    option (aelf.base) = "treasury_contract.proto";

    // Action
    rpc ChangeTreasuryController (acs1.AuthorityInfo) returns (google.protobuf.Empty) {
    }
    
    // View
    rpc GetTreasuryController (google.protobuf.Empty) returns (acs1.AuthorityInfo) {
        option (aelf.is_view) = true;
    }
}